Closed Bug 1357451 Opened 7 years ago Closed 7 years ago

Firefox needs several OS_SOLARIS ifdefs

Categories

(Core :: IPC, defect)

52 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox55 --- fixed

People

(Reporter: petr.sumbera, Assigned: petr.sumbera)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Build ID: 20170323105023

Steps to reproduce:

To build Firefox on Solaris reqires to extend several OS_LINUX pre processor conditions to include also OS_SOLARIS.

Plus in ipc/chromium/src/base/time_posix.cc: we need to exlude timestruct.tm_gmtoff and timestruct.tm_zone wchich are not available on Solaris

And in ipc/chromium/src/base/platform_thread_posix.cc add call to pthread_setname_np().
Summary: Firefox needs several OS_SOLARIS ifdefs like other systems do → Firefox needs several OS_SOLARIS ifdefs like
Summary: Firefox needs several OS_SOLARIS ifdefs like → Firefox needs several OS_SOLARIS ifdefs
Attached patch Bug1357451.patchSplinter Review
Attachment #8859236 - Flags: review?(mh+mozilla)
Attachment #8859236 - Flags: review?(mh+mozilla) → review?(kchen)
Attachment #8859236 - Flags: review?(kchen) → review+
Keywords: checkin-needed
Assignee: nobody → petr.sumbera
Component: Untriaged → IPC
Product: Firefox → Core
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/12e148dcab63
Add OS_SOLARIS ifdefs to various IPC code. r=kchen
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/12e148dcab63
Status: UNCONFIRMED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: