Bug 1357451 - Add OS_SOLARIS ifdefs to various IPC code. r=kchen